[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2021'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'frontier-template-node'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/arthur-cw/substrate'
version = '3.0.0'


[features]
aura = ['frontier-template-runtime/aura']
default = ['aura']
manual-seal = ['frontier-template-runtime/manual-seal']
rpc_binary_search_estimate = ['fc-rpc/rpc_binary_search_estimate']
runtime-benchmarks = ['frontier-template-runtime/runtime-benchmarks']

[dependencies]
async-trait = '0.1'
futures = '0.3'
jsonrpc-core = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4.8'

[dependencies.clap]
features = ['derive']
version = '3.1'

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '3.1'

[dependencies.fc-consensus]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fc-db]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fc-mapping-sync]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fc-rpc]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fc-rpc-core]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fp-consensus]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fp-dynamic-fee]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fp-evm]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fp-rpc]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.fp-storage]
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'


[dependencies.frame-benchmarking]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.frame-system]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.frontier-template-runtime]
default-features = false
features = ['std']
path = '../runtime'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-basic-authorship]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-client-api]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-consensus]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-consensus-aura]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-consensus-manual-seal]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-keystore]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-network]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-rpc]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-rpc-api]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-telemetry]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-transaction-pool]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-api]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-block-builder]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-blockchain]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-consensus]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-consensus-aura]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-core]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-inherents]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-keyring]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-runtime]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.sp-timestamp]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/arthur-cw/substrate'
branch = 'substrate-cloudwalk-v1.0.2'
