[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2021'
homepage = 'https://substrate.io'
license = 'Unlicense'
name = 'frontier-template-runtime'
publish = false
repository = 'https://github.com/substrate-developer-hub/frontier-node-template/'
version = '0.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
branch = 'substrate-cloudwalk-v1.0.2'
git = 'https://github.com/arthur-cw/substrate'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.fp-self-contained]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.frame-benchmarking]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'
optional = true

[dependencies.frame-executive]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.frame-support]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.frame-system]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.frame-system-benchmarking]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'
optional = true

[dependencies.frame-system-rpc-runtime-api]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-aura]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-balances]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-base-fee]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/arthur-cw/frontier.git'
branch = 'frontier-cloudwalk-v1.0.2'

[dependencies.pallet-grandpa]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-randomness-collective-flip]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-sudo]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-timestamp]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-transaction-payment]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.2'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-block-builder]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-consensus-aura]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-core]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-inherents]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-io]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-offchain]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-runtime]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-session]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-std]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'
version = '4.0.0'

[dependencies.sp-transaction-pool]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'

[dependencies.sp-version]
branch = 'substrate-cloudwalk-v1.0.2'
default-features = false
git = 'https://github.com/arthur-cw/substrate'
version = '5.0.0'

[features]
aura = []
default = [
    'std',
    'aura',
]
manual-seal = []
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-ethereum/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
]
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'fp-rpc/std',
    'fp-self-contained/std',
    'pallet-base-fee/std',
    'pallet-dynamic-fee/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-evm-precompile-simple/std',
    'pallet-evm-precompile-sha3fips/std',
]
